attempt to make images fit full width of container, then set height to auto to prevent distortion

--- a/web/static/global.css
+++ b/web/static/global.css
@@ -156,6 +156,11 @@ li {
   padding: 10px;
   max-width: 100vw;
 }
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 
 /* inverted styles for dark mode */
 .dark body {
